test代码 jdkbug 规避